<resources>
    <string name="app_name">Activity 6 - Bulfa</string>
    <string name="dialogs">Dialogs</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="back">back</string>
    <string name="result">Result</string>
    <string name="result_Text">Result</string>
</resources>